Fixed the avatar being squashed by adjacent element.

--- a/actualStyle.css
+++ b/actualStyle.css
@@ -59,16 +59,22 @@ section
   font-weight: 100;
   color: var(--white);
   font-size: 3rem;
-  width: 100%;
   text-align: left;
   margin-left: 2rem;
 }
 
 .user-avatar {
+  border: solid var(--main-dark) 3px;
   border-radius: 50%;
-  border: solid var(--main-dark) 4px;
-  height: 100px;
-  width: 100px;
+  height: 5em;
+  width: 5em;
+  overflow: hidden;
+}
+
+.user-avatar img
+{
+  width: 100%;
+  height: 100%;
 }
 
 .center-body {
